--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.4.0"
   },
+  "optionalDependencies": {
+    "@next/swc-darwin-x64": "*"
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
@@ -26,5 +29,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
 }
